000 - resul updates for major changes

--- a/static/html/googleoauth2.html
+++ b/static/html/googleoauth2.html
@@ -37,6 +37,7 @@
 <script>
 function signInCallback(authResult) {
 	console.log(JSON.stringify(authResult))	
+  window.localStorage.setItem("googleToken", authResult.code)
 }
 
 </script>
