000 - resul updates for major changes

--- a/static/html/play.html
+++ b/static/html/play.html
@@ -39,8 +39,11 @@
 			</select>
 		</div>
 		<div class="pnlHelpContainer">
-			<button class="btnHelp" title="sonucu göster" onclick="help()">?</button>
+			<button class="btnHelp" title="sonucu göster" onclick="help()">??</button>
 		</div>
+			<div class="pnlStepHelpContainer">
+				<button class="btnStepHelp" title="renk satın al" onclick="stepHelp()">?</button>
+			</div>
 		<div id="pnlTotalPoint" class="pnlTotalPoint">
 			
 		</div>
