000 - resul updates for raund step help

--- a/static/html/play.html
+++ b/static/html/play.html
@@ -24,6 +24,10 @@
 			<img id="imgResultAngry" src="images/angry.png" class="imgResultAngry" style="display: none;" />
 			<img id="imgResultHelp" src="images/angry2.png" class="imgResultHelp" style="display: none;" />
 		</div>
+
+		<div align="center" id="pnlTextResult" class="pnlTextResult">
+			
+		</div>
 		
 	</div>
 	
