000 - resul updates for user raund history and minor updates

--- a/static/html/play.html
+++ b/static/html/play.html
@@ -45,9 +45,13 @@
 		<div class="pnlHelpContainer">
 			<button class="btnHelp" title="sonucu göster" onclick="help()">??</button>
 		</div>
-			<div class="pnlStepHelpContainer">
-				<button class="btnStepHelp" title="renk satın al" onclick="stepHelp()">?</button>
-			</div>
+		<div class="pnlStepHelpContainer">
+			<button class="btnStepHelp" title="renk satın al" onclick="stepHelp()">?</button>
+		</div>
+
+		<!-- <div class="pnlRaundHistoryContainer">
+			<button class="btnRaundHistory" title="raund history" onclick="getRaundHistory()"></button>
+		</div> -->
 		<div id="pnlTotalPoint" class="pnlTotalPoint">
 			
 		</div>
