000 - resul add /stages

--- a/static/html/play.html
+++ b/static/html/play.html
@@ -49,9 +49,9 @@
 			<button class="btnStepHelp" title="renk satın al" onclick="stepHelp()">?</button>
 		</div>
 
-		<!-- <div class="pnlRaundHistoryContainer">
+		<div class="pnlRaundHistoryContainer">
 			<button class="btnRaundHistory" title="raund history" onclick="getRaundHistory()"></button>
-		</div> -->
+		</div>
 		<div id="pnlTotalPoint" class="pnlTotalPoint">
 			
 		</div>
