000 - resul updates for raund timer

--- a/static/html/play.html
+++ b/static/html/play.html
@@ -18,7 +18,26 @@
 	<div class="clear"></div>
 	
 	<div class="resultPanel">
-		<div align="center" id="pnlRaundStartPoint" class="pnlStepNumber"></div>
+		<div  align="center">
+			<div style="width:164px;margin:auto;">
+				<div align="center" class="fLeft">
+					<div align="center" style="width:82px;">
+						<img src="images/mark.png" title="point" class="imgResultHappy fLeft" />
+						<div align="center" id="pnlRaundStartPoint" class="pnlStepNumber fLeft" style="width:40px;margin-left:2px;"></div>
+					</div>
+
+				</div>
+				<div align="center" class="fLeft">
+					<div align="center" style="width:82px;">
+						<img src="images/timer.png" class="imgResultHappy fLeft" />
+						<div align="center" id="pnlTimer" title="timer" class="pnlTimer fLeft" style="width:40px;margin-left:2px;"></div>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		
+		<div class="clear"></div>
 		<div align="center" id="pnlResult" class="pnlResult">
 			<img id="imgResultHappy" src="images/happy.png" class="imgResultHappy" style="display: none;" />
 			<img id="imgResultAngry" src="images/angry.png" class="imgResultAngry" style="display: none;" />
