000 - resul updates play.js

--- a/static/html/play.html
+++ b/static/html/play.html
@@ -29,8 +29,8 @@
 				</div>
 				<div align="center" class="fLeft">
 					<div align="center" style="width:82px;">
-						<img src="images/timer.png" class="imgResultHappy fLeft" />
-						<div align="center" id="pnlTimer" title="timer" class="pnlTimer fLeft" style="width:40px;margin-left:2px;"></div>
+						<img src="images/timer.png"  title="timer" class="imgResultHappy fLeft" />
+						<div align="center" id="pnlTimer" class="pnlTimer fLeft" style="width:40px;margin-left:2px;"></div>
 					</div>
 				</div>
 			</div>
