000 - resul updates for user matching and accept matching mechanism

--- a/static/html/multiplay.html
+++ b/static/html/multiplay.html
@@ -10,7 +10,10 @@
 
     
     
-    <button class="btnHelp" title="" onclick="registerForMultiPlay()">connect</button>
+    <button class="btnHelp" style="width: 100px;" title="" onclick="registerForMultiPlay()">connect</button>
+
+    <button class="btnHelp" style="width: 100px;" title="" onclick="acceptMatchForMultiPlay()">accept match</button>
+
     <span id="pnlResult"></span>
 
    
